--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "branch-name": "enforce-branch-name '(hotfix|bugfix|feature)/.+' --ignore 'staging'",
     "prettier:fix": "prettier --write .",
     "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc",
-    "build": "react-scripts build",
+    "build": "npm install --legacy-peer-deps && npm run build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
