--- a/package.json
+++ b/package.json
@@ -9,10 +9,9 @@
     "@emotion/styled": "^11.11.5",
     "@hookform/resolvers": "^3.4.2",
     "@iconify/react": "^4.1.1",
-    "@mui/icons-material": "^5.15.18",
+    "@mui/icons-material": "^5.15.20",
     "@mui/lab": "^5.0.0-alpha.170",
-    "@mui/material": "^5.15.20",
-    "@mui/styles": "^5.15.20",
+    "@mui/material": "^5.15.18",
     "@mui/system": "^5.15.15",
     "@mui/x-date-pickers": "^7.6.2",
     "@testing-library/jest-dom": "^5.17.0",
@@ -55,8 +54,7 @@
     "branch-name": "enforce-branch-name '(hotfix|bugfix|feature)/.+' --ignore 'staging'",
     "prettier:fix": "prettier --write .",
     "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc",
-    "prebuild": "npm install --legacy-peer-deps",
-    "build": "npm run prebuild && npm run your-existing-build-command",
+    "build": "npm run build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
