--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "dayjs": "^1.11.11",
     "draft-js": "^0.11.7",
     "enforce-branch-name": "^1.1.2",
+    "immutable": "^4.3.6",
+    "install": "^0.13.0",
     "moment": "^2.30.1",
+    "npm": "^10.8.1",
     "postcss": "^8.4.38",
     "primereact": "^10.6.6",
     "prop-types": "^15.8.1",
@@ -34,6 +37,7 @@
     "react-draft-wysiwyg": "^1.15.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.51.5",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-moment": "^1.1.3",
     "react-player": "^2.16.0",
