--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-draft-wysiwyg": "^1.15.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.51.5",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-moment": "^1.1.3",
     "react-player": "^2.16.0",
@@ -49,12 +50,15 @@
     "zod": "^3.23.8"
   },
   "scripts": {
-    "build": "react-scripts build",
     "start": "react-scripts start",
     "prepare": "husky install",
     "branch-name": "enforce-branch-name '(hotfix|bugfix|feature)/.+' --ignore 'staging'",
+    "lint": "eslint .",
+    "lint:fix": "eslint ./src --fix",
     "prettier:fix": "prettier --write .",
     "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "browserslist": {
@@ -70,10 +74,24 @@
     ]
   },
   "devDependencies": {
+    "eslint": "^8.2.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-react-hooks": "^4.6.2",
     "globals": "^15.3.0",
     "husky": "^8.0.0",
+    "lint-staged": "^15.2.2",
     "prettier": "^3.2.5",
-    "pretty-quick": "^4.0.0"
+    "pretty-quick": "^4.0.0",
+    "stylelint": "^16.5.0"
   },
   "husky": {
     "hooks": {
