--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,7 @@
   },
   "plugins": ["react"],
   "rules": {
+    "no-console": "off",
     "react/prop-types": "off",
     "no-unused-vars": "off",
     "react/no-unescaped-entities": "off",
