--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dayjs": "^1.11.11",
     "draft-js": "^0.11.7",
     "enforce-branch-name": "^1.1.2",
+    "lottie-react": "^2.4.0",
     "moment": "^2.30.1",
     "postcss": "^8.4.38",
     "primereact": "^10.6.6",
