--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dayjs": "^1.11.11",
     "draft-js": "^0.11.7",
     "enforce-branch-name": "^1.1.2",
+    "html-react-parser": "^5.1.10",
     "immutable": "^4.3.6",
     "lottie-react": "^2.4.0",
     "moment": "^2.30.1",
@@ -39,6 +40,7 @@
     "react-hook-form": "^7.51.5",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
+    "react-loader-spinner": "^6.1.6",
     "react-moment": "^1.1.3",
     "react-player": "^2.16.0",
     "react-router-dom": "^6.23.1",
